2008-06-25  Dafydd Crosby <dcrosby@userful.com>
	* PPDtoXML: Now adds the <drivers> tag, inserting the preferred 
	  driver automatically. The next release will allow the insertion
	  of extra driver entries.

2008-06-25  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-combo-xml.c: Allow XML files with header lines ("<? ... ?>",
	  "<! ... >") in the beginning. Everything which is before the main
	  tag of each file ("<printer>" for printer entries, "<driver>" for
	  driver entries, and "<option>" for option entries) gets removed
	  now.

2008-06-18  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-perl-data.c: Added support for output of both translated
	  and original (English) license text and for links to external
	  license text files.

2008-06-06  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-preferred-driver.in: Skip printers without printer
	  XML entry, to avoid that empty printer XML files get generated.

	* foomatic-compiledb.in: Simplify the generation of the list of
	  valid printer/driver combos even more.

2008-06-05  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-combo-xml.c: When supplying the "-C" option (overview
	  of all printer/driver combos for which a PPD file is available),
	  do not go through the printers without printer XML
	  entries (printers only mentioned in driver XML entries) as they
	  never have a valid PPD.

	  Consider a printer/driver combo also valid if the driver is
	  "Postscript" and in the <lang> section there is a <postscript>
	  section, independent whether the printer is listed in the
	  "Postscript" driver XML file.

	  In the driver XML file only copy the XML section for selected
	  printer into the emptied driver list if the section really
	  exists.

	  If we request an overview of only the printer/driver combos
	  which provide a valid PPD file ("-C" option for
	  foomatic-combo-xml) we do not list combos which have the
	  requested driver only defined in the <drivers> section of the